<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotation="0"
    android:background="@drawable/bg"
    android:visibility="visible"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="35sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_button"
        android:layout_alignParentBottom="true"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_main_menu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@+id/text_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnSighIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bth_sign_in"
            android:text="@string/button_register" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_register"
            android:layout_weight="1"
            android:text="@string/button_login"/>

    </LinearLayout>


</RelativeLayout>